--- a/style.scss
+++ b/style.scss
@@ -29,6 +29,10 @@ body {
     border: none;
 }
 
+p {
+    font-size: 0.8em;
+}
+
 
 /*--------HEADER-----------------*/
 .header {
@@ -42,6 +46,22 @@ body {
     align-items: center;
     background: #fff;
     z-index: 1;
+}
+.header__hamburger{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0.3em;
+    background: $primarybg;
+    cursor: pointer;
+    i{
+        font-size: 1.5em;
+    }
 }
 
 .header__navbar {
@@ -75,6 +95,7 @@ body.header__navbar {
 
 .header__menu {
     padding: 0 2em;
+    text-align: center;
 }
 
 .header__menuitem {
@@ -84,10 +105,12 @@ body.header__navbar {
 
 .header__close {
     position: absolute;
-    top: 0;
-    left: 0;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
     font-size: 2em;
-    margin: 0 0 0 0.5em;
+    margin: 0 0 0.5em 0;
+    cursor: pointer;
 }
 
 /*--------LANDING-----------------*/
@@ -131,7 +154,7 @@ body.header__navbar {
 .intro__text {
     grid-column: 1 / -1;
     grid-row: 2 / 6;
-    font-size: 0.9em;
+
 }
 
 .intro__image {
@@ -198,7 +221,6 @@ body.header__navbar {
 
     p {
         padding: 1.6em;
-        font-size: 0.9em;
         text-align: center;
     }
 
@@ -233,7 +255,7 @@ body.header__navbar {
     }
 
     p {
-        font-size: 0.65em;
+        font-size: 0.60em;
         font-weight: bold;
         word-wrap: break-word;
         padding: 0 1em;
@@ -323,19 +345,161 @@ body.header__navbar {
     }
 }
 
-.approach__upcoming{
+.approach__upcoming {
     padding: 2em;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    button{
+
+    button {
         width: 50%;
     }
 }
+
 /*--------NETWORK SCIENCE-----------------*/
 
+.netscience {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.netscience__text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h4 {
+        padding: 1.5em 2em 0;
+        font-size: 0.9em;
+    }
+
+    p {
+        padding: 1.5em 2em 0;
+    }
+}
+
+.netscience__apps {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: auto;
+
+    h3 {
+        justify-self: center;
+        grid-column: 1 / -1;
+        grid-row: 1 / 2;
+        margin: 2em 0;
+    }
+
+    button {
+        grid-column: 1 / -1;
+        grid-row: 20 / 21;
+        width: 50%;
+        justify-self: center;
+    }
+}
+
+.netscience__circle {
+    width: 200px;
+    height: 200px;
+    background: $primarybg;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 0 2em 0;
+
+    h5 {
+        font-size: 0.7em;
+    }
+
+    img {
+        width: 40%;
+    }
+
+    p {
+        word-wrap: break-word;
+        padding: 1em;
+        justify-self: center;
+        text-align: center;
+        font-size: 0.6em;
+    }
+}
+
+.netscience__circle1 {
+    grid-column: 1 / -1;
+    grid-row: 2 / 4;
+}
+
+.netscience__circle2 {
+    grid-column: 1 / -1;
+    grid-row: 5 / 7;
+}
+
+.netscience__circle3 {
+    grid-column: 1 / -1;
+    grid-row: 8 / 10;
+}
+
+.netscience__circle4 {
+    grid-column: 1 / -1;
+    grid-row: 11 / 13;
+}
+
+.netscience__circle5 {
+    grid-column: 1 / -1;
+    grid-row: 14 / 16;
+}
+
+.netscience__circle6 {
+    grid-column: 1 / -1;
+    grid-row: 17 / 19;
+}
+
 /*--------FOOTER-----------------*/
+
+.footer {
+    height: 50vh;
+    background: $secondarybg;
+    margin: 2em 0 0 0;
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    align-items: center;
+}
+
+.footer__contact {
+    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1em;
+
+    span {
+        margin: 0.5em;
+    }
+
+    div {
+        display: flex;
+    }
+    p{
+        justify-self: center;
+        text-align: center;
+    }
+}
+
+.footer__social {
+    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1em;
+
+}
 
 /*--------MEDIA QUERIES--------*/
 
@@ -362,7 +526,7 @@ body.header__navbar {
 
 @keyframes slide {
     0% {
-        transform: translateX(100%);
+        transform: translateY(100%);
         opacity: 0;
     }
 
