--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,10 @@ body {
   border: none;
 }
 
+p {
+  font-size: 0.8em;
+}
+
 /*--------HEADER-----------------*/
 .header {
   position: fixed;
@@ -38,6 +42,23 @@ body {
   align-items: center;
   background: #fff;
   z-index: 1;
+}
+
+.header__hamburger {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0.3em;
+  background: #FFDE70;
+  cursor: pointer;
+}
+.header__hamburger i {
+  font-size: 1.5em;
 }
 
 .header__navbar {
@@ -69,6 +90,7 @@ body.header__navbar {
 
 .header__menu {
   padding: 0 2em;
+  text-align: center;
 }
 
 .header__menuitem {
@@ -78,10 +100,12 @@ body.header__navbar {
 
 .header__close {
   position: absolute;
-  top: 0;
-  left: 0;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
   font-size: 2em;
-  margin: 0 0 0 0.5em;
+  margin: 0 0 0.5em 0;
+  cursor: pointer;
 }
 
 /*--------LANDING-----------------*/
@@ -122,7 +146,6 @@ body.header__navbar {
 .intro__text {
   grid-column: 1/-1;
   grid-row: 2/6;
-  font-size: 0.9em;
 }
 
 .intro__image {
@@ -184,7 +207,6 @@ body.header__navbar {
 }
 .about__text p {
   padding: 1.6em;
-  font-size: 0.9em;
   text-align: center;
 }
 .about__text button {
@@ -215,7 +237,7 @@ body.header__navbar {
   width: 50%;
 }
 .about__circle p {
-  font-size: 0.65em;
+  font-size: 0.6em;
   font-weight: bold;
   word-wrap: break-word;
   padding: 0 1em;
@@ -311,7 +333,137 @@ body.header__navbar {
 }
 
 /*--------NETWORK SCIENCE-----------------*/
+.netscience {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.netscience__text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.netscience__text h4 {
+  padding: 1.5em 2em 0;
+  font-size: 0.9em;
+}
+.netscience__text p {
+  padding: 1.5em 2em 0;
+}
+
+.netscience__apps {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: auto;
+}
+.netscience__apps h3 {
+  justify-self: center;
+  grid-column: 1/-1;
+  grid-row: 1/2;
+  margin: 2em 0;
+}
+.netscience__apps button {
+  grid-column: 1/-1;
+  grid-row: 20/21;
+  width: 50%;
+  justify-self: center;
+}
+
+.netscience__circle {
+  width: 200px;
+  height: 200px;
+  background: #FFDE70;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0 2em 0;
+}
+.netscience__circle h5 {
+  font-size: 0.7em;
+}
+.netscience__circle img {
+  width: 40%;
+}
+.netscience__circle p {
+  word-wrap: break-word;
+  padding: 1em;
+  justify-self: center;
+  text-align: center;
+  font-size: 0.6em;
+}
+
+.netscience__circle1 {
+  grid-column: 1/-1;
+  grid-row: 2/4;
+}
+
+.netscience__circle2 {
+  grid-column: 1/-1;
+  grid-row: 5/7;
+}
+
+.netscience__circle3 {
+  grid-column: 1/-1;
+  grid-row: 8/10;
+}
+
+.netscience__circle4 {
+  grid-column: 1/-1;
+  grid-row: 11/13;
+}
+
+.netscience__circle5 {
+  grid-column: 1/-1;
+  grid-row: 14/16;
+}
+
+.netscience__circle6 {
+  grid-column: 1/-1;
+  grid-row: 17/19;
+}
+
 /*--------FOOTER-----------------*/
+.footer {
+  height: 50vh;
+  background: #03243C;
+  margin: 2em 0 0 0;
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  align-items: center;
+}
+
+.footer__contact {
+  justify-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1em;
+}
+.footer__contact span {
+  margin: 0.5em;
+}
+.footer__contact div {
+  display: flex;
+}
+.footer__contact p {
+  justify-self: center;
+  text-align: center;
+}
+
+.footer__social {
+  justify-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1em;
+}
+
 /*--------MEDIA QUERIES--------*/
 /*Medium screen-----------------------------*/
 /*large screen-----------------------------*/
@@ -324,7 +476,7 @@ body.header__navbar {
 /*--------ANIMATIONS--------*/
 @keyframes slide {
   0% {
-    transform: translateX(100%);
+    transform: translateY(100%);
     opacity: 0;
   }
   100% {
