--- a/style.scss
+++ b/style.scss
@@ -47,7 +47,8 @@ p {
     background: #fff;
     z-index: 1;
 }
-.header__hamburger{
+
+.header__hamburger {
     position: fixed;
     bottom: 0;
     left: 0;
@@ -59,8 +60,25 @@ p {
     padding: 0.3em;
     background: $primarybg;
     cursor: pointer;
-    i{
+
+    i {
         font-size: 1.5em;
+    }
+}
+
+.header__logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    position: relative;
+    width: 100%;
+    height: 50px;
+    img {
+        display: inline-block;
+        position: absolute;
+        width: 70%;
+        transform: translateY(-15%);
     }
 }
 
@@ -486,7 +504,8 @@ body.header__navbar {
     div {
         display: flex;
     }
-    p{
+
+    p {
         justify-self: center;
         text-align: center;
     }
