styling of netscience and footer

--- a/style.scss
+++ b/style.scss
@@ -74,6 +74,7 @@ p {
     position: relative;
     width: 100%;
     height: 50px;
+
     img {
         display: inline-block;
         position: absolute;
@@ -503,6 +504,11 @@ body.header__navbar {
 
     div {
         display: flex;
+
+        i {
+            padding: 0.2em;
+            font-size: 1.5em;
+        }
     }
 
     p {
@@ -518,6 +524,12 @@ body.header__navbar {
     align-items: center;
     padding: 1em;
 
+    div {
+        i {
+            padding: 0.2em;
+            font-size: 1.5em;
+        }
+    }
 }
 
 /*--------MEDIA QUERIES--------*/
