--- a/styles/style.css
+++ b/styles/style.css
@@ -467,6 +467,10 @@ body.header__navbar {
 .footer__contact div {
   display: flex;
 }
+.footer__contact div i {
+  padding: 0.2em;
+  font-size: 1.5em;
+}
 .footer__contact p {
   justify-self: center;
   text-align: center;
@@ -478,6 +482,10 @@ body.header__navbar {
   flex-direction: column;
   align-items: center;
   padding: 1em;
+}
+.footer__social div i {
+  padding: 0.2em;
+  font-size: 1.5em;
 }
 
 /*--------MEDIA QUERIES--------*/
