--- a/styles/style.css
+++ b/styles/style.css
@@ -42,6 +42,7 @@ p {
   align-items: center;
   background: #fff;
   z-index: 1;
+  box-shadow: 0 -2px 15px #ddd;
 }
 
 .header__hamburger {
@@ -59,6 +60,9 @@ p {
 }
 .header__hamburger i {
   font-size: 1.5em;
+}
+.header__hamburger span {
+  font-size: 0.9em;
 }
 
 .header__logo {
@@ -78,9 +82,10 @@ p {
 }
 
 .header__navbar {
-  position: absolute;
-  height: 100vh;
-  width: 100%;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
   right: 0;
   background: #03243C;
   opacity: 0.92;
@@ -89,19 +94,15 @@ p {
   flex-direction: column;
   justify-content: space-around;
   transition-property: display, height, width;
-  margin: 32.6em 0 0 0;
+  transform-origin: bottom;
+  margin: 0;
   z-index: 1;
-  animation: slide 0.5s linear;
+  animation: slide 0.5s ease-out;
 }
 
 .header__navbar_hide {
   display: none;
   transition-property: display, height, width;
-}
-
-body.header__navbar {
-  position: fixed;
-  overflow: hidden;
 }
 
 .header__menu {
@@ -110,6 +111,7 @@ body.header__navbar {
 }
 
 .header__menuitem {
+  position: relative;
   margin: 0 0 3em 0;
   cursor: pointer;
 }
@@ -126,21 +128,30 @@ body.header__navbar {
 
 /*--------LANDING-----------------*/
 .landing {
-  height: 27vh;
+  height: 13em;
   background: #FFDE70;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   padding: 0 2em;
   margin: 3em 0 0 0;
-  font-style: italic;
 }
 
 .landing__valueprop {
   margin: 0 0 1em 0;
-  font-weight: 700;
-  font-size: 1.1em;
+  font-weight: 500;
+  font-size: 0.9em;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+.landing__cta {
+  display: flex;
+  flex-direction: column;
+}
+.landing__cta svg {
+  justify-self: flex-end;
 }
 
 /*--------INTRO-----------------*/
@@ -162,6 +173,7 @@ body.header__navbar {
 .intro__text {
   grid-column: 1/-1;
   grid-row: 2/6;
+  padding: 1em 2em;
 }
 
 .intro__image {
@@ -238,8 +250,8 @@ body.header__navbar {
 }
 
 .about__circle {
-  width: 120px;
-  height: 120px;
+  width: 130px;
+  height: 130px;
   background: #FFDE70;
   border-radius: 50%;
   display: flex;
@@ -259,6 +271,13 @@ body.header__navbar {
   padding: 0 1em;
   display: flex;
   text-align: center;
+}
+
+.subheaders {
+  font-weight: 300;
+  text-transform: uppercase;
+  align-self: center;
+  margin: 1em 0;
 }
 
 .about__circle1 {
@@ -319,6 +338,10 @@ body.header__navbar {
 .approach__banner {
   background: #FFDE70;
   padding: 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  letter-spacing: 2px;
 }
 
 .approach__seasons {
@@ -500,12 +523,22 @@ body.header__navbar {
 /*--------ANIMATIONS--------*/
 @keyframes slide {
   0% {
-    transform: translateY(100%);
+    transform: scale(0);
     opacity: 0;
   }
   100% {
-    transform: translateX(0);
-    opacity: 0.92;
+    transform: scale(1);
+    opacity: 0.95;
+  }
+}
+@keyframes unslide {
+  0% {
+    transform: scale(1);
+    opacity: 0.95;
+  }
+  100% {
+    transform: scale(0);
+    opacity: 0;
   }
 }
 
