changes to animation

--- a/style.scss
+++ b/style.scss
@@ -141,7 +141,7 @@ p {
     background: $primarybg;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     margin: 3em 0 0 0;
     position: relative;
@@ -149,6 +149,7 @@ p {
 
 .landing__bg{
     position: absolute;
+    width: 100%;
 }
 .landing__valueprop {
     margin: 0 0 1em 0;
