--- a/style.scss
+++ b/style.scss
@@ -33,6 +33,26 @@ p {
     font-size: 0.8em;
 }
 
+.subheaders {
+    font-weight: 300;
+    text-transform: uppercase;
+    align-self: center;
+    margin: 4em 0 0 0;
+    position: relative;
+    &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 30%;
+        left: 50%;
+        transform: translateX(-50%);
+        background: url('/illustrations/underline.png');
+        background-repeat: no-repeat;
+        background-position-x: left;
+        background-position-y: bottom;
+    }
+}
 
 /*--------HEADER-----------------*/
 .header {
@@ -59,7 +79,7 @@ p {
     justify-content: center;
     align-items: center;
     padding: 0.3em;
-    background: $primarybg;
+    background: #fff;
     cursor: pointer;
 
     i {
@@ -90,14 +110,14 @@ p {
 
 .header__navbar {
     position: fixed;
-    top: 0;
+    top: 10%;
     bottom: 0;
     left: 0;
     right: 0;
-    background: #03243C;
-    opacity: 0.92;
-    color: #fff;
+    background: #fff;
+    color: #272727;
     display: flex;
+    opacity: 0.95;
     flex-direction: column;
     justify-content: space-around;
     transition-property: display, height, width;
@@ -105,6 +125,7 @@ p {
     margin: 0;
     z-index: 1;
     animation: slide 0.5s ease-out;
+    box-shadow: 2px 0 5px #272727;
 }
 
 
@@ -147,10 +168,11 @@ p {
     position: relative;
 }
 
-.landing__bg{
+.landing__bg {
     position: absolute;
     width: 100%;
 }
+
 .landing__valueprop {
     margin: 0 0 1em 0;
     font-weight: 500;
@@ -227,9 +249,10 @@ p {
 
 .about__hero {
     background: $secondarybg;
-    height: 40vh;
+    height: 45vh;
     position: relative;
     display: grid;
+    padding: 3em 0 0 0;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, auto);
     justify-content: center;
@@ -280,6 +303,10 @@ p {
     }
 }
 
+.about__us.subheaders {
+    margin: 1em 0 0 0;
+}
+
 .about__items {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
@@ -315,12 +342,6 @@ p {
     }
 }
 
-.subheaders {
-    font-weight: 300;
-    text-transform: uppercase;
-    align-self: center;
-    margin: 1em 0;
-}
 
 .about__circle1 {
     grid-column: 1 / 4;
@@ -416,6 +437,20 @@ p {
 
     button {
         width: 50%;
+    }
+    ul{
+        margin: 0 0 1em 0;
+        li{
+            font-size: 0.9em;
+            margin: 0 0 0.5em 0;
+            i{
+                margin: 0 1em 0 0;
+            }
+        }
+    }
+    
+    h3{
+        font-weight: 600;
     }
 }
 
@@ -600,24 +635,12 @@ p {
 
 @keyframes slide {
     0% {
-        transform: scale(0);
+        transform: translateY(100%);
         opacity: 0;
     }
 
     100% {
-        transform: scale(1.0);
-        opacity: 0.95;
-    }
-}
-
-@keyframes unslide {
-    0% {
-        transform: scale(1);
-        opacity: 0.95;
-    }
-
-    100% {
-        transform: scale(0);
-        opacity: 0;
+        transform: translateY(0);
+        opacity: 0.75;
     }
 }
