--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@
   text-decoration: none;
   font-size: 100%;
   line-height: 1.6;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -24,6 +25,8 @@ body {
   font-size: 0.8em;
   outline: none;
   border: none;
+  width: 110px;
+  height: 28px;
 }
 
 p {
@@ -62,7 +65,7 @@ p {
   justify-content: center;
   align-items: center;
   background: #fff;
-  z-index: 1;
+  z-index: 99;
   box-shadow: 0 -2px 15px #ddd;
 }
 
@@ -98,7 +101,8 @@ p {
 .header__logo img {
   display: inline-block;
   position: absolute;
-  width: 70%;
+  width: 220px;
+  max-width: 250px;
   transform: translateY(-15%);
 }
 
@@ -152,8 +156,8 @@ p {
 .landing {
   height: 13em;
   background: #FFDE70;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
   justify-content: space-around;
   align-items: center;
   margin: 3em 0 0 0;
@@ -163,6 +167,7 @@ p {
 .landing__bg {
   position: absolute;
   width: 100%;
+  height: 100%;
 }
 
 .landing__valueprop {
@@ -171,6 +176,10 @@ p {
   font-size: 0.8em;
   letter-spacing: 2px;
   text-transform: uppercase;
+  z-index: 1;
+  width: 140%;
+  display: flex;
+  grid-column: 2/5;
 }
 
 .landing__valueprop_span1 {
@@ -184,13 +193,14 @@ p {
 }
 
 .landing__valueprop_span3 {
-  font-size: 1.6em;
+  font-size: 2em;
   font-weight: 700;
 }
 
 .landing__cta {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  grid-column: 5/6;
 }
 .landing__cta svg {
   justify-self: flex-end;
@@ -209,7 +219,6 @@ p {
 .intro button {
   grid-column: 2/5;
   grid-row: 8/5;
-  width: 90%;
 }
 
 .intro__text {
@@ -279,9 +288,6 @@ p {
 .about__text p {
   padding: 1.6em;
   text-align: center;
-}
-.about__text button {
-  width: 30%;
 }
 
 .about__us.subheaders {
@@ -407,9 +413,6 @@ p {
   justify-content: center;
   align-items: center;
 }
-.approach__upcoming button {
-  width: 50%;
-}
 .approach__upcoming ul {
   margin: 0 0 1em 0;
 }
@@ -422,6 +425,7 @@ p {
 }
 .approach__upcoming h3 {
   font-weight: 600;
+  margin: 0 0 0.5em 0;
 }
 
 /*--------NETWORK SCIENCE-----------------*/
@@ -460,7 +464,6 @@ p {
 .netscience__apps button {
   grid-column: 1/-1;
   grid-row: 20/21;
-  width: 50%;
   justify-self: center;
 }
 
@@ -521,7 +524,8 @@ p {
 
 /*--------FOOTER-----------------*/
 .footer {
-  height: 50vh;
+  height: 40vh;
+  max-height: 40vh;
   background: #03243C;
   margin: 2em 0 0 0;
   display: flex;
@@ -535,7 +539,7 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1em;
+  padding: 0.5em 1em;
 }
 .footer__contact span {
   margin: 0.5em;
@@ -545,7 +549,7 @@ p {
 }
 .footer__contact div i {
   padding: 0.2em;
-  font-size: 1.5em;
+  font-size: 1.3em;
 }
 .footer__contact p {
   justify-self: center;
@@ -557,22 +561,313 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1em;
+  padding: 0.5em 1em;
 }
 .footer__social div i {
   padding: 0.2em;
-  font-size: 1.5em;
+  font-size: 1.3em;
 }
 
 /*--------MEDIA QUERIES--------*/
 /*Medium screen-----------------------------*/
 /*large screen-----------------------------*/
-/*--------BACKGROUNDS--------*/
-.pagebg {
-  background: url("/illustrations/dottedbg.png");
-  background-repeat: no-repeat;
-}
+/*xlarge screen-----------------------------*/
+@media screen and (min-width: 60.5em) {
+  p {
+    font-size: 16px;
+  }
 
+  .subheaders {
+    font-weight: 400;
+    margin: 2em 0 0 0;
+    position: relative;
+    font-size: 2em;
+  }
+
+  /*--------HEADER-----------------*/
+  .header__hamburger {
+    display: none;
+  }
+
+  .header__logo {
+    display: flex;
+    justify-content: stretch;
+    position: relative;
+    width: 40%;
+  }
+
+  .header__navbar {
+    position: relative;
+    opacity: 1;
+    display: flex;
+    transition-property: none;
+    margin: 0;
+    animation: none;
+    box-shadow: none;
+    width: 100%;
+  }
+
+  .header__menu {
+    padding: 0;
+    text-align: left;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+  }
+
+  .header__menuitem {
+    margin: 0 0 0 2em;
+  }
+
+  .header__close {
+    display: none;
+  }
+
+  /*--------LANDING-----------------*/
+  .landing {
+    height: 45vh;
+    grid-template-columns: repeat(12, 1fr);
+    align-items: center;
+    margin: 3em 0 0 0;
+    position: relative;
+  }
+
+  .landing__valueprop {
+    margin: 0;
+    font-size: 24px;
+    grid-column: 3/8;
+  }
+
+  .landing__cta {
+    grid-column: 9/11;
+  }
+
+  /*--------INTRO-----------------*/
+  .intro {
+    height: 50vh;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    padding: 0;
+  }
+  .intro button {
+    grid-column: 3/5;
+    grid-row: 3/4;
+  }
+
+  .intro__text {
+    grid-column: 3/10;
+    grid-row: 1/3;
+    padding: 3em 0 0 0;
+    font-size: 1.3em;
+  }
+
+  .intro__image {
+    grid-column: 8/12;
+    grid-row: 2/6;
+    width: 400px;
+    height: 400px;
+  }
+  .intro__image img {
+    width: 100%;
+    min-width: 320px;
+    max-width: 550px;
+    opacity: 0.8;
+    object-fit: cover;
+  }
+
+  /*--------ABOUT-----------------*/
+  .about__hero {
+    background: #03243C;
+    height: 50vh;
+    position: relative;
+    display: grid;
+    padding: 0;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    justify-content: center;
+  }
+  .about__hero blockquote {
+    font-size: 2.5em;
+    grid-column: 3/6;
+    grid-row: 1/6;
+    margin: 2em 0 0 0;
+    text-align: left;
+    justify-content: flex-end;
+  }
+  .about__hero span {
+    font-size: 1em;
+    grid-column: 3/5;
+    grid-row: 5/6;
+    margin: 0;
+    justify-self: flex-start;
+  }
+
+  .about__overlay {
+    width: 100%;
+    height: 100%;
+    grid-column: 5/12;
+    grid-row: 2/6;
+  }
+  .about__overlay img {
+    max-width: 800px;
+    object-fit: cover;
+  }
+
+  .about__text p {
+    padding: 1.6em 10em;
+    text-align: left;
+    font-size: 1.3em;
+  }
+
+  .about__items {
+    grid-template-columns: repeat(24, 1fr);
+    grid-template-rows: repeat(24, 30px);
+  }
+
+  .about__circle {
+    width: 160px;
+    height: 160px;
+    margin: 0;
+  }
+  .about__circle img {
+    width: 60%;
+  }
+  .about__circle p {
+    font-size: 0.75em;
+    font-weight: bold;
+  }
+
+  .about__circle1 {
+    grid-column: 13/18;
+    grid-row: 2/7;
+  }
+
+  .about__circle2 {
+    grid-column: 16/21;
+    grid-row: 7/12;
+  }
+
+  .about__circle3 {
+    grid-column: 15/20;
+    grid-row: 13/18;
+  }
+
+  .about__circle4 {
+    grid-column: 11/16;
+    grid-row: 17/22;
+  }
+
+  .about__circle5 {
+    grid-column: 7/12;
+    grid-row: 13/18;
+  }
+
+  .about__circle6 {
+    grid-column: 5/10;
+    grid-row: 7/12;
+  }
+
+  .about__circle7 {
+    grid-column: 8/13;
+    grid-row: 2/7;
+  }
+
+  /*--------APPROACH-----------------*/
+  .approach__about {
+    padding: 2em 13em;
+  }
+  .approach__about p {
+    font-size: 1.3em;
+  }
+
+  .approach__seasons p {
+    padding: 2em 10em;
+    font-size: 1.3em;
+  }
+
+  .approach__season1 {
+    height: 100vh;
+  }
+  .approach__season1 img {
+    object-fit: cover;
+  }
+
+  .approach__upcoming ul {
+    margin: 0 0 1em 0;
+  }
+  .approach__upcoming ul li {
+    font-size: 1.1em;
+  }
+  .approach__upcoming h3 {
+    font-size: 1.4em;
+  }
+
+  /*--------NETWORK SCIENCE-----------------*/
+  .netscience {
+    align-items: stretch;
+  }
+
+  .netscience__text h4 {
+    padding: 1.5em 2em 0;
+    font-size: 1.2em;
+  }
+  .netscience__text p {
+    padding: 1em 10em;
+    font-size: 1.3em;
+  }
+
+  .netscience__apps {
+    grid-template-columns: repeat(12, 1fr);
+  }
+  .netscience__apps h3 {
+    justify-self: center;
+    grid-column: 1/-1;
+    grid-row: 1/2;
+    margin: 2em 0;
+  }
+  .netscience__apps button {
+    grid-column: 1/-1;
+    grid-row: 20/21;
+    justify-self: center;
+  }
+
+  .netscience__circle1 {
+    grid-column: 3/5;
+    grid-row: 2/4;
+  }
+
+  .netscience__circle2 {
+    grid-column: 6/8;
+    grid-row: 2/4;
+  }
+
+  .netscience__circle3 {
+    grid-column: 9/11;
+    grid-row: 2/4;
+  }
+
+  .netscience__circle4 {
+    grid-column: 3/5;
+    grid-row: 5/7;
+  }
+
+  .netscience__circle5 {
+    grid-column: 6/8;
+    grid-row: 5/7;
+  }
+
+  .netscience__circle6 {
+    grid-column: 9/11;
+    grid-row: 5/7;
+  }
+}
+/*--------BACKGROUNDS--------*/
+/* .pagebg {
+    background: url('/illustrations/dottedbg.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+} */
 /*--------ANIMATIONS--------*/
 @keyframes slide {
   0% {
