--- a/_xlarge.scss
+++ b/_xlarge.scss
@@ -4,13 +4,16 @@ p {
 
 .subheaders {
     font-weight: 400;
-    margin: 2em 0 0 0;
+    margin: 3em 0 0 0;
     position: relative;
     font-size: 2em;
 }
 
 /*--------HEADER-----------------*/
 
+.header {
+    padding: 1em;
+}
 
 .header__hamburger {
     display: none;
@@ -51,20 +54,21 @@ p {
     display: none;
 }
 
+
 /*--------LANDING-----------------*/
 
 .landing {
-    height: 45vh;
+    height: 40vh;
     grid-template-columns: repeat(12, 1fr);
     align-items: center;
-    margin: 3em 0 0 0;
+    margin: 5em 0 0 0;
     position: relative;
 }
 
 .landing__valueprop {
     margin: 0;
     font-size: 24px;
-    grid-column: 3 / 8;
+    grid-column: 2 / 8;
 
 }
 
@@ -89,8 +93,8 @@ p {
 .intro__text {
     grid-column: 3 / 10;
     grid-row: 1 / 3;
-    padding: 3em 0 0 0;
-    font-size: 1.3em;
+    padding: 1em 0 0 0;
+    font-size: 1.2em;
 }
 
 .intro__image {
@@ -112,41 +116,45 @@ p {
 
 .about__hero {
     background: $secondarybg;
-    height: 50vh;
+    height: 60vh;
     position: relative;
     display: grid;
     padding: 0;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(6, 1fr);
     justify-content: center;
-
+    margin: 4em 0 0 0;
     blockquote {
         font-size: 2.5em;
-        grid-column: 3 / 6;
+        grid-column: 2 / 6;
         grid-row: 1 / 6;
-        margin: 2em 0 0 0;
+        margin: 0;
         text-align: left;
         justify-content: flex-end;
+        align-self: center;
     }
 
     span {
         font-size: 1em;
-        grid-column: 3 / 5;
+        grid-column: 2 / 5;
         grid-row: 5 / 6;
         margin: 0;
-        justify-self: flex-start;
+        align-self: flex-end;
     }
 }
 
 .about__overlay {
     width: 100%;
     height: 100%;
-    grid-column: 5 / 12;
-    grid-row: 2 / 6;
+    grid-column: 3 / 12;
+    grid-row: 1 / -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     img {
-
-        max-width: 800px;
+        width: 100%;
+        max-height: 370px;
         object-fit: cover;
     }
 }
@@ -156,7 +164,7 @@ p {
     p {
         padding: 1.6em 10em;
         text-align: left;
-        font-size: 1.3em;
+        font-size: 1.2em;
     }
 
 }
@@ -224,7 +232,7 @@ p {
     padding: 2em 13em;
 
     p {
-        font-size: 1.3em;
+        font-size: 1.2em;
     }
 }
 
@@ -232,7 +240,7 @@ p {
 
     p {
         padding: 2em 10em;
-        font-size: 1.3em;
+        font-size: 1.2em;
     }
 }
 
@@ -262,8 +270,9 @@ p {
 
 /*--------NETWORK SCIENCE-----------------*/
 
-.netscience{
+.netscience {
     align-items: stretch;
+    margin: 0 0 1em 0;
 }
 
 .netscience__text {
@@ -275,7 +284,7 @@ p {
 
     p {
         padding: 1em 10em;
-        font-size: 1.3em;
+        font-size: 1.2em;
     }
 }
 
@@ -324,4 +333,25 @@ p {
 .netscience__circle6 {
     grid-column: 9 / 11;
     grid-row: 5 / 7;
+}
+
+/*--------FOOTER-----------------*/
+
+.footer {
+    padding: 2em 0 0 0;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto;
+    color: #fff;
+    align-items: center;
+}
+
+.footer__contact {
+    grid-column: 2 / 5;
+    grid-row: 1 / 3;
+}
+
+.footer__social {
+    grid-column: 5 / 8;
+    grid-row: 1 / 3;
 }
