--- a/style.scss
+++ b/style.scss
@@ -186,9 +186,10 @@ p {
     letter-spacing: 2px;
     text-transform: uppercase;
     z-index: 1;
-    width: 140%;
+    width: 100%;
     display: flex;
-    grid-column: 2 / 5;
+    grid-column: 2 / -1;
+    grid-row: 1 / 4;
 }
 
 .landing__valueprop_span1 {
@@ -209,7 +210,8 @@ p {
 .landing__cta {
     display: flex;
     justify-content: center;
-    grid-column: 5 / 6;
+    grid-column: 1 / -1;
+    grid-row: 3 / 5;
 
     svg {
         justify-self: flex-end;
@@ -222,7 +224,7 @@ p {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: auto;
-    padding: 1.5em;
+    padding: 0;
     height: max-content;
     justify-content: space-around;
     align-items: center;
@@ -236,11 +238,11 @@ p {
 .intro__text {
     grid-column: 1 / -1;
     grid-row: 2 / 6;
-    padding: 1em 2em;
+    padding: 2em;
 }
 
 .intro__image {
-    grid-column: 2 / -1;
+    grid-column: 3 / -1;
     grid-row: 5 / 8;
 
     img {
@@ -261,18 +263,18 @@ p {
     height: 45vh;
     position: relative;
     display: grid;
-    padding: 3em 0 0 0;
+    padding: 1em 0 0 0;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, auto);
     justify-content: center;
-
+    margin: 3em 0 0 0;
     blockquote {
         color: #fff;
         font-size: 1.1em;
         font-weight: bold;
         grid-column: 1 / -1;
         grid-row: 1 / 5;
-        margin: 1em 1em 0.3em;
+        margin: 0 1em 0.3em;
         text-align: center;
     }
 
@@ -280,7 +282,7 @@ p {
         color: #fff;
         font-size: 0.8em;
         background-color: transparent;
-        grid-column: 2 / -1;
+        grid-column: 1 / -1;
         grid-row: 4 / 4;
         margin: 1em 0 0 4em;
     }
@@ -568,7 +570,7 @@ p {
     height: 40vh;
     max-height: 40vh;
     background: $secondarybg;
-    margin: 2em 0 0 0;
+    margin: 2em 0 1em 0;
     display: flex;
     flex-direction: column;
     color: #fff;
@@ -632,7 +634,7 @@ p {
 
 /*xlarge screen-----------------------------*/
 
-@media screen and (min-width: 60.5em) {
+@media screen and (min-width: 64em) {
     @import 'xlarge';
 }
 
