--- a/_xlarge.scss
+++ b/_xlarge.scss
@@ -9,13 +9,19 @@ p {
     font-size: 2em;
 }
 
+.inner {
+    max-width: 100%;
+}
+
 /*--------HEADER-----------------*/
 
 .header {
     padding: 1em;
 }
 
-.header__home_smhide{display: none;} 
+.header__home_smhide {
+    display: none;
+}
 
 .header__hamburger {
     display: none;
@@ -63,8 +69,12 @@ p {
 
 /*--------LANDING-----------------*/
 
+.main {
+    display: flex;
+    flex-direction: column;
+}
+
 .landing {
-    grid-template-columns: repeat(12, 1fr);
     align-items: center;
     margin: 5em 0 0 0;
     position: relative;
@@ -73,26 +83,47 @@ p {
 .landing__valueprop {
     margin: 0;
     font-size: 24px;
-    grid-column: 2 / 8;
+    grid-column: 1 / -1;
 
 }
 
+.landing__valueprop_span1 {
+    font-size: 2em;
+    font-weight: 700;
+    margin: 0 0 1em 0;
+}
+
+.landing__valueprop_span2 {
+    font-size: 1.6em;
+    font-weight: 700;
+    margin: 0 0 1em 0;
+}
+
+.landing__valueprop_span3 {
+    font-size: 3em;
+    font-weight: 700;
+}
+
+
 .landing__cta {
-    grid-column: 9 / 11;
+    grid-column: 1 / -1;
 }
 
 /*--------INTRO-----------------*/
 
 .intro {
     height: 50vh;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(6, 1fr);
     padding: 0;
 
     button {
-        grid-column: 3 / 5;
-        grid-row: 3 / 4;
+        grid-column: 5 / 7;
+        grid-row: 4 / 5;
     }
+}
+
+.intro__inner {
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto;
 }
 
 .intro__text {
@@ -103,7 +134,7 @@ p {
 }
 
 .intro__image {
-    grid-column: 8 / 12;
+    grid-column: 7 / 12;
     grid-row: 2 / 6;
     width: 400px;
     height: 400px;
@@ -132,7 +163,7 @@ p {
 
     blockquote {
         font-size: 2.5em;
-        grid-column: 3 / 7;
+        grid-column: 3 / 6;
         grid-row: 1 / 6;
         margin: 0;
         text-align: left;
@@ -145,7 +176,7 @@ p {
 .about__quote {
     font-size: 1em;
     grid-column: 3 / 5;
-    grid-row: 5 / 6;
+    grid-row: 5 / 7;
     margin: 0;
     align-self: flex-start;
 }
@@ -158,7 +189,7 @@ p {
 .about__overlay {
     width: 100%;
     height: 100%;
-    grid-column: 3 / 12;
+    grid-column: 3 / 11;
     grid-row: 1 / -1;
     display: flex;
     justify-content: center;
@@ -171,33 +202,30 @@ p {
 }
 
 .about__text {
-
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
     p {
         padding: 1.6em 10em;
         text-align: left;
         font-size: 1.2em;
+        grid-column: 2 / 12;
     }
 
 }
 
 .about__items {
-    //grid-template-columns: repeat(24, 1fr);
-    //grid-template-rows: repeat(24, 30px);
-    display: block;
+    display: flex;
+    flex-direction: column;
     height: 70vh;
     width: 1000px;
     margin: 0 auto;
 }
 
 .about__circle {
-    width: 160px;
-    height: 160px;
     margin: 0;
-    position: absolute;
 
-    img {
-        width: 60%;
-    }
+
+    img {}
 
     p {
         font-size: 0.75em;
@@ -206,61 +234,15 @@ p {
 }
 
 
-.about__circle1 {
-    //grid-column: 13 / 18;
-    //grid-row: 2 / 7;
-    left: 50%;
-    top: 15%;
-    transform: translate(-50%, -15%);
-}
+.about__circle1 {}
 
-.about__circle2 {
-    //grid-column: 16 / 21;
-    //grid-row: 7 / 12;
-    left: 70%;
-    top: 30%;
-    transform: translate(-80%, -30%);
-}
+.about__circle2 {}
 
-.about__circle3 {
-    //grid-column: 15 / 20;
-    //grid-row: 13 / 18;
-    left: 75%;
-    top: 60%;
-    transform: translate(-75%, -60%);
-}
+.about__circle3 {}
 
-.about__circle4 {
-    //grid-column: 11 / 16;
-    //grid-row: 17 / 22;
-    left: 60%;
-    top: 85%;
-    transform: translate(-60%, -85%);
-}
+.about__circle4 {}
 
-.about__circle5 {
-    //grid-column: 7 / 12;
-    //grid-row: 13 / 18;
-    left: 40%;
-    top: 85%;
-    transform: translate(-40%, -85%);
-}
-
-.about__circle6 {
-    //grid-column: 5 / 10;
-    //grid-row: 7 / 12;
-    left: 25%;
-    top: 60%;
-    transform: translate(-25%, -60%);
-}
-
-.about__circle7 {
-    //grid-column: 8 / 13;
-    //grid-row: 2 / 7;
-    left: 30%;
-    top: 30%;
-    transform: translate(-20%, -30%);
-}
+.about__circle5 {}
 
 /*--------APPROACH-----------------*/
 
@@ -341,33 +323,61 @@ p {
     }
 }
 
+
+.netscience__circle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 0 2.5em 0;
+
+    h5 {
+        font-size: 1em;
+    }
+
+    span {
+        display: flex;
+        width: 150px;
+        height: 150px;
+        position: relative;
+
+        img {
+            /*  position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%); */
+            object-fit: cover;
+        }
+    }
+}
+
 .netscience__circle1 {
-    grid-column: 3 / 5;
+    grid-column: 2 / 5;
     grid-row: 2 / 4;
 }
 
 .netscience__circle2 {
-    grid-column: 6 / 8;
+    grid-column: 5 / 9;
     grid-row: 2 / 4;
 }
 
 .netscience__circle3 {
-    grid-column: 9 / 11;
+    grid-column: 9 / 12;
     grid-row: 2 / 4;
 }
 
 .netscience__circle4 {
-    grid-column: 3 / 5;
+    grid-column: 2 / 5;
     grid-row: 5 / 7;
 }
 
 .netscience__circle5 {
-    grid-column: 6 / 8;
+    grid-column: 5 / 9;
     grid-row: 5 / 7;
 }
 
 .netscience__circle6 {
-    grid-column: 9 / 11;
+    grid-column: 9 / 12;
     grid-row: 5 / 7;
 }
 
@@ -375,19 +385,9 @@ p {
 
 .footer {
     padding: 2em 0 0 0;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto;
+    display: flex;
+    flex-direction: column;
     color: #fff;
     align-items: center;
-}
-
-.footer__contact {
-    grid-column: 2 / 5;
-    grid-row: 1 / 3;
-}
-
-.footer__social {
-    grid-column: 5 / 8;
-    grid-row: 1 / 3;
+    margin: 0;
 }
