--- a/styles/style.css
+++ b/styles/style.css
@@ -7,9 +7,9 @@
   list-style: none;
   outline: none;
   text-decoration: none;
-  font-size: 100%;
   line-height: 1.6;
   scroll-behavior: smooth;
+  font-size: 100%;
 }
 
 body {
@@ -54,6 +54,11 @@ p {
   background-position-y: bottom;
 }
 
+.inner {
+  max-width: 100%;
+  width: 100%;
+}
+
 /*--------HEADER-----------------*/
 .header {
   position: fixed;
@@ -66,7 +71,7 @@ p {
   align-items: center;
   background: #fff;
   z-index: 99;
-  box-shadow: 0 -2px 15px #ddd;
+  box-shadow: 0 -2px 8px #ddd;
 }
 
 .header__home_smhide {
@@ -104,9 +109,9 @@ p {
 .header__logo img {
   display: inline-block;
   position: absolute;
-  width: 220px;
-  max-width: 250px;
-  transform: translateY(-15%);
+  width: 160px;
+  max-width: 160px;
+  transform: translateY(5px);
 }
 
 .fa-home {
@@ -170,9 +175,7 @@ p {
 .landing {
   height: 100vh;
   background: #FFDE70;
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(12, 1fr);
+  display: flex;
   justify-content: center;
   align-items: center;
   margin: 3em 0 0 0;
@@ -183,6 +186,13 @@ p {
   position: absolute;
   width: 100%;
   height: 100%;
+}
+
+.landing__inner {
+  display: grid;
+  height: 100%;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(12, 1fr);
 }
 
 .landing__valueprop {
@@ -199,21 +209,30 @@ p {
   text-align: center;
   line-height: 2;
 }
+.landing__valueprop span {
+  display: inline-block;
+}
 
 .landing__valueprop_span1 {
-  font-size: 1.3em;
+  font-size: 1.6em;
   font-weight: 700;
-  margin: 0 0 1em 0;
+  margin: 0 0 0.5em 0;
 }
 
 .landing__valueprop_span2 {
-  font-size: 1.4em;
+  font-size: 1.7em;
   font-weight: 700;
   margin: 0 0 1em 0;
 }
 
 .landing__valueprop_span3 {
-  font-size: 2.2em;
+  font-size: 1.8em;
+  font-weight: 900;
+  margin: 1em 0 0 0;
+}
+
+.landing__valueprop_span4 {
+  font-size: 1.3em;
   font-weight: 700;
 }
 
@@ -221,7 +240,7 @@ p {
   display: flex;
   justify-content: center;
   grid-column: 1/-1;
-  grid-row: 7/9;
+  grid-row: 8/10;
 }
 .landing__cta svg {
   justify-self: flex-end;
@@ -229,9 +248,7 @@ p {
 
 /*--------INTRO-----------------*/
 .intro {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: auto;
+  display: flex;
   padding: 0;
   height: max-content;
   justify-content: space-around;
@@ -239,7 +256,13 @@ p {
 }
 .intro button {
   grid-column: 2/5;
-  grid-row: 8/5;
+  grid-row: 6/7;
+}
+
+.intro__inner {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: auto;
 }
 
 .intro__text {
@@ -263,15 +286,21 @@ p {
   flex-direction: column;
 }
 
-.about__hero {
+.about__inner_hero {
   background: #03243C;
+  display: flex;
+  padding: 2em 0;
+  margin: 1em 0 0 0;
+}
+
+.about__hero {
   position: relative;
   display: grid;
   padding: 1em 0 0 0;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(6, auto);
   justify-content: center;
-  margin: 1em 0 0 0;
+  margin: 0;
 }
 .about__hero blockquote {
   color: #fff;
@@ -279,12 +308,12 @@ p {
   font-weight: bold;
   grid-column: 1/5;
   grid-row: 1/5;
-  margin: 0 1em 0.3em;
+  margin: 0 0 0 1em;
 }
 
 .about__quote {
   color: #fff;
-  font-size: 0.8em;
+  font-size: 0.7em;
   background-color: transparent;
   grid-column: 1/-1;
   grid-row: 5/6;
@@ -302,7 +331,12 @@ p {
   grid-row: 2/-1;
 }
 .about__overlay img {
-  width: 95%;
+  width: 100%;
+}
+
+.about__inner_about {
+  display: flex;
+  flex-direction: column;
 }
 
 .about__text {
@@ -320,76 +354,52 @@ p {
 }
 
 .about__items {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: auto;
+  display: flex;
+  flex-direction: column;
   margin: 1em 0 0 0;
   padding: 1em;
   position: relative;
 }
 
 .about__circle {
-  width: 130px;
-  height: 130px;
-  background: #FFDE70;
-  border-radius: 50%;
+  padding: 0.3em;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  margin: 0 0 1em 0;
+  position: relative;
+  border-radius: 10px;
+}
+
+.about__circle_img {
+  display: flex;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
   justify-content: center;
   align-items: center;
   justify-self: center;
-  margin: 0 0 1em 0;
-  position: relative;
+  clip-path: circle();
+  background: #fff;
 }
-.about__circle img {
-  width: 50%;
+
+.about__circle_text h4 {
+  font-size: 0.9em;
 }
-.about__circle p {
+.about__circle_text p {
   font-size: 0.6em;
   font-weight: bold;
-  word-wrap: break-word;
   padding: 0 2em;
   display: flex;
   text-align: center;
 }
 
-.about__circle1 {
-  grid-column: 1/4;
-  grid-row: 1/4;
-}
-
-.about__circle2 {
-  grid-column: 4/-1;
-  grid-row: 1/4;
-}
-
-.about__circle3 {
-  grid-column: 1/4;
-  grid-row: 5/8;
-}
-
-.about__circle4 {
-  grid-column: 4/-1;
-  grid-row: 5/8;
-}
-
-.about__circle5 {
-  grid-column: 1/4;
-  grid-row: 9/12;
-}
-
-.about__circle6 {
-  grid-column: 4/-1;
-  grid-row: 9/12;
-}
-
-.about__circle7 {
-  grid-column: 1/-1;
-  grid-row: 13/16;
-}
-
 /*--------APPROACH-----------------*/
 .approach {
+  display: flex;
+  flex-direction: column;
+}
+
+.approach__inner_desc {
   display: flex;
   flex-direction: column;
 }
@@ -427,7 +437,6 @@ p {
 
 .approach__season1 {
   height: 100vh;
-  background: #FFDE70;
 }
 
 .approach__intro {
@@ -482,9 +491,12 @@ p {
   align-items: center;
 }
 
-.netscience__text {
+.netscience__inner_disc {
   display: flex;
   flex-direction: column;
+}
+
+.netscience__text {
   justify-content: center;
   align-items: center;
 }
@@ -505,7 +517,7 @@ p {
   justify-self: center;
   grid-column: 1/-1;
   grid-row: 1/2;
-  margin: 2em 0;
+  margin: 2em 0 1em 0;
 }
 .netscience__apps button {
   grid-column: 1/-1;
@@ -514,28 +526,36 @@ p {
 }
 
 .netscience__circle {
-  width: 200px;
-  height: 200px;
-  background: #FFDE70;
-  border-radius: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0 0 2em 0;
+  margin: 0 0 2.5em 0;
 }
 .netscience__circle h5 {
-  font-size: 0.7em;
+  font-size: 0.9em;
 }
-.netscience__circle img {
-  width: 40%;
+.netscience__circle span {
+  display: flex;
+  justify-content: center;
+  width: 150px;
+  height: 150px;
+  position: relative;
+}
+.netscience__circle span img {
+  width: 150px;
+  /* position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%); */
 }
 .netscience__circle p {
   word-wrap: break-word;
   padding: 0 2em;
   justify-self: center;
   text-align: center;
-  font-size: 0.6em;
+  font-size: 0.8em;
+  height: 80px;
 }
 
 .netscience__circle1 {
@@ -581,37 +601,24 @@ p {
 }
 
 .footer__contact {
-  justify-self: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 0.5em 1em;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
-.footer__contact span {
-  margin: 0.5em;
-}
-.footer__contact div {
-  display: flex;
-}
-.footer__contact div i {
-  padding: 0.2em;
-  font-size: 1.3em;
-}
-.footer__contact p {
-  justify-self: center;
-  text-align: center;
+.footer__contact a {
+  margin: 0 0 0 0.5em;
+  text-decoration: none;
+  color: #fff;
+  border-bottom: 1px solid #fff;
 }
 
-.footer__social {
+p {
   justify-self: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0.5em 1em;
-}
-.footer__social div i {
-  padding: 0.2em;
-  font-size: 1.3em;
+  text-align: center;
 }
 
 /*--------MEDIA QUERIES--------*/
@@ -628,6 +635,10 @@ p {
     margin: 3em 0 0 0;
     position: relative;
     font-size: 2em;
+  }
+
+  .inner {
+    max-width: 100%;
   }
 
   /*--------HEADER-----------------*/
@@ -683,8 +694,12 @@ p {
   }
 
   /*--------LANDING-----------------*/
+  .main {
+    display: flex;
+    flex-direction: column;
+  }
+
   .landing {
-    grid-template-columns: repeat(12, 1fr);
     align-items: center;
     margin: 5em 0 0 0;
     position: relative;
@@ -693,23 +708,43 @@ p {
   .landing__valueprop {
     margin: 0;
     font-size: 24px;
-    grid-column: 2/8;
+    grid-column: 1/-1;
+  }
+
+  .landing__valueprop_span1 {
+    font-size: 2em;
+    font-weight: 700;
+    margin: 0 0 1em 0;
+  }
+
+  .landing__valueprop_span2 {
+    font-size: 1.6em;
+    font-weight: 700;
+    margin: 0 0 1em 0;
+  }
+
+  .landing__valueprop_span3 {
+    font-size: 3em;
+    font-weight: 700;
   }
 
   .landing__cta {
-    grid-column: 9/11;
+    grid-column: 1/-1;
   }
 
   /*--------INTRO-----------------*/
   .intro {
     height: 50vh;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(6, 1fr);
     padding: 0;
   }
   .intro button {
-    grid-column: 3/5;
-    grid-row: 3/4;
+    grid-column: 5/7;
+    grid-row: 4/5;
+  }
+
+  .intro__inner {
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto;
   }
 
   .intro__text {
@@ -720,7 +755,7 @@ p {
   }
 
   .intro__image {
-    grid-column: 8/12;
+    grid-column: 7/12;
     grid-row: 2/6;
     width: 400px;
     height: 400px;
@@ -747,7 +782,7 @@ p {
   }
   .about__hero blockquote {
     font-size: 2.5em;
-    grid-column: 3/7;
+    grid-column: 3/6;
     grid-row: 1/6;
     margin: 0;
     text-align: left;
@@ -758,7 +793,7 @@ p {
   .about__quote {
     font-size: 1em;
     grid-column: 3/5;
-    grid-row: 5/6;
+    grid-row: 5/7;
     margin: 0;
     align-self: flex-start;
   }
@@ -771,7 +806,7 @@ p {
   .about__overlay {
     width: 100%;
     height: 100%;
-    grid-column: 3/12;
+    grid-column: 3/11;
     grid-row: 1/-1;
     display: flex;
     justify-content: center;
@@ -782,73 +817,31 @@ p {
     object-fit: cover;
   }
 
+  .about__text {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+  }
   .about__text p {
     padding: 1.6em 10em;
     text-align: left;
     font-size: 1.2em;
+    grid-column: 2/12;
   }
 
   .about__items {
-    display: block;
+    display: flex;
+    flex-direction: column;
     height: 70vh;
     width: 1000px;
     margin: 0 auto;
   }
 
   .about__circle {
-    width: 160px;
-    height: 160px;
     margin: 0;
-    position: absolute;
-  }
-  .about__circle img {
-    width: 60%;
   }
   .about__circle p {
     font-size: 0.75em;
     font-weight: bold;
-  }
-
-  .about__circle1 {
-    left: 50%;
-    top: 15%;
-    transform: translate(-50%, -15%);
-  }
-
-  .about__circle2 {
-    left: 70%;
-    top: 30%;
-    transform: translate(-80%, -30%);
-  }
-
-  .about__circle3 {
-    left: 75%;
-    top: 60%;
-    transform: translate(-75%, -60%);
-  }
-
-  .about__circle4 {
-    left: 60%;
-    top: 85%;
-    transform: translate(-60%, -85%);
-  }
-
-  .about__circle5 {
-    left: 40%;
-    top: 85%;
-    transform: translate(-40%, -85%);
-  }
-
-  .about__circle6 {
-    left: 25%;
-    top: 60%;
-    transform: translate(-25%, -60%);
-  }
-
-  .about__circle7 {
-    left: 30%;
-    top: 30%;
-    transform: translate(-20%, -30%);
   }
 
   /*--------APPROACH-----------------*/
@@ -911,54 +904,68 @@ p {
     justify-self: center;
   }
 
+  .netscience__circle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 0 2.5em 0;
+  }
+  .netscience__circle h5 {
+    font-size: 1em;
+  }
+  .netscience__circle span {
+    display: flex;
+    width: 150px;
+    height: 150px;
+    position: relative;
+  }
+  .netscience__circle span img {
+    /*  position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%); */
+    object-fit: cover;
+  }
+
   .netscience__circle1 {
-    grid-column: 3/5;
+    grid-column: 2/5;
     grid-row: 2/4;
   }
 
   .netscience__circle2 {
-    grid-column: 6/8;
+    grid-column: 5/9;
     grid-row: 2/4;
   }
 
   .netscience__circle3 {
-    grid-column: 9/11;
+    grid-column: 9/12;
     grid-row: 2/4;
   }
 
   .netscience__circle4 {
-    grid-column: 3/5;
+    grid-column: 2/5;
     grid-row: 5/7;
   }
 
   .netscience__circle5 {
-    grid-column: 6/8;
+    grid-column: 5/9;
     grid-row: 5/7;
   }
 
   .netscience__circle6 {
-    grid-column: 9/11;
+    grid-column: 9/12;
     grid-row: 5/7;
   }
 
   /*--------FOOTER-----------------*/
   .footer {
     padding: 2em 0 0 0;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto;
+    display: flex;
+    flex-direction: column;
     color: #fff;
     align-items: center;
-  }
-
-  .footer__contact {
-    grid-column: 2/5;
-    grid-row: 1/3;
-  }
-
-  .footer__social {
-    grid-column: 5/8;
-    grid-row: 1/3;
+    margin: 0;
   }
 }
 /*--------BACKGROUNDS--------*/
